<resources>
    <string name="app_name">Receipez</string>

    <!--Welcome screen content-->
    <string name="welcomeTitle">Welcome</string>
    <string name="welcomeContentPara">Discover new flavour and make every meal a masterpiece.</string>

    <!--Button names-->
    <string name="regBtn">Register</string>
    <string name="loginBtn">Login</string>

    <!--Register Account-->
    <string name="regTitle">Create your account</string>
    <string name="regContent">Start sharing your love for cooking and join our community by creating an account today!</string>
    <string name="forgotPwd">Forgot Password?</string>

    <!--Placeholders-->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailAd">E-mail address</string>
    <string name="pwd">Password</string>
    <string name="confirmpwd">Confirm Password</string>

    <!-- Login screen content -->
    <string name="loginTitle">Login</string>
    <string name="loginContent">Sign in to explore new recipes and save your favorites.</string>
    <string name="noAccount">Don/t have an account?</string>
    <string name="registerHere">Register Here</string>

    <!-- Toggle Password Visibility -->
    <string name="toggle_password_visibility">Toggle Password Visibility</string>

    <!-- Array for Cuisine Options -->
    <string-array name="cuisine_options_array">
        <item>Sri Lankan</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Japanese</item>
        <item>Other</item>
    </string-array>

    <!-- Array for Food Type Options -->
    <string-array name="food_type_options_array">
        <item>Veg</item>
        <item>Non-veg</item>
    </string-array>
    <string-array name="ingredient_options_array">
        <item>Flour</item>
        <item>Sugar</item>
        <item>Salt</item>
        <item>Olive Oil</item>
        <item>Butter</item>
        <item>Eggs</item>
        <item>Milk</item>
        <item>Garlic</item>
        <item>Onions</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Rice</item>
        <item>Pasta</item>
        <item>Tomatoes</item>
        <item>Potatoes</item>
        <item>Carrots</item>
        <item>Cheese</item>
        <item>Black Pepper</item>
        <item>Baking Powder</item>
        <item>Vanilla Extract</item>
    </string-array>
    <string-array name="ingredient_quantity_array">
        <item>1 tsp</item>
        <item>1 tbsp</item>
        <item>1/4 cup</item>
        <item>1/2 cup</item>
        <item>1 cup</item>
        <item>1/3 cup</item>
        <item>1/8 tsp</item>
        <item>2 tsp</item>
        <item>2 tbsp</item>
        <item>2 cups</item>
        <item>100 ml</item>
        <item>200 ml</item>
        <item>250 ml</item>
        <item>500 ml</item>
        <item>1 liter</item>
        <item>50 grams</item>
        <item>100 grams</item>
        <item>250 grams</item>
        <item>500 grams</item>
        <item>1 kg</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logOutBtn">Logout</string>
    <string name="editProfile">Edit Profile</string>
    <string name="myRecipeBtn">My Recipe</string>
    <string name="resetPwdBtn">Reset Password</string>
    <string name="saveRecipe">Saved Recipes</string>
    <string name="userScreen">User Screen</string>

    <!--Add New Recipe Content-->
    <string name="addRecipeTitle">Add New Recipe</string>
    <!-- EditText Hints -->
    <string name="recipe_name_hint">Recipe Name</string>
    <string name="description_hint">Description</string>
    <string name="ingredients_hint">Ingredients</string>
    <string name="steps_hint">Steps</string>
    <string name="preparation_time_hint">Meal Preparation Time</string>
    <string name="cooking_time_hint">Meal Cooking Time</string>
    <string name="total_time_hint">Total Time</string>

    <!-- Upload Section -->
    <string name="upload_photos">Upload Photos</string>
    <string name="upload_image_button">Upload Image</string>
    <string name="profile_image_description">Profile Image</string>

    <!-- Submit Button -->
    <string name="submit_button_text">Submit</string>

    <!-- Miscellaneous -->
    <string name="select_image">Select Image</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="recipe_added_successfully">Recipe added successfully</string>
    <string name="failed_to_add_recipe">Failed to add recipe</string>
    <string name="log_in_to_submit">Please log in to submit a recipe</string>

    <string name="closeEditProfile">Close Edit Profile</string>


    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="close">Close</string>
    <string name="save_password">Save Password</string>

    <string-array name="cuisine_array">
        <item>Sort by cuisine</item>
        <item>Sri Lankan</item>
        <item>Indian</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Japanese</item>
        <item>Other</item>
        <!-- Add more cuisines as needed -->
    </string-array>

    <string-array name="veg_nonveg_array">
        <item>Non veg</item>
        <item>Veg</item>
    </string-array>


</resources>
