<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".view.activities.RegisterAccount">

    <!-- Back Arrow Image -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="37dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/arrowleft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO"
        tools:ignore="HardcodedText" />

    <!-- Title -->
    <TextView
        android:id="@+id/regTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/regTitle"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <!-- Subtitle Content -->
    <TextView
        android:id="@+id/regContent"
        android:layout_width="359dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/regContent"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regTitle" />

    <!-- Linear Layout for Input Fields -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regContent">

        <EditText
            android:id="@+id/email"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailAd"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="#757575"
            android:textColorLink="@color/black"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black"
                android:autofillHints=""
                tools:ignore="InefficientWeight" />

            <ImageView
                android:id="@+id/passwordVisibilityToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/toggle_password_visibility"
                android:padding="12dp"
                android:src="@drawable/eye"
                android:focusable="true" />
        </LinearLayout>

        <!-- Confirm Password Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/confirmpwd"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#757575"
                android:textColorLink="@color/black"
                tools:ignore="InefficientWeight" />

            <ImageView
                android:id="@+id/confirmPasswordVisibilityToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eye"
                android:contentDescription="@string/toggle_password_visibility"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

    <!-- Forgot Password Link -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/forgotPwd"
        android:textColor="#1536F1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:focusable="true" />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btnActive"
        android:text="@string/regBtn"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
