<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ResetPassword">

    <!-- Reset Password Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Close Button -->
        <ImageButton
            android:id="@+id/closeResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/close"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Old Password Input with Eye Icon -->
        <EditText
            android:id="@+id/editOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toStartOf="@+id/toggleOldPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/toggleOldPassword"
            android:layout_width="55dp"
            android:layout_height="52dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reset_password"
            android:src="@drawable/eye"
            app:layout_constraintBottom_toBottomOf="@+id/editOldPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editOldPassword" />

        <!-- New Password Input with Eye Icon -->
        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toStartOf="@+id/toggleNewPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editOldPassword" />

        <!-- Confirm Password Input with Eye Icon -->

        <ImageButton
            android:id="@+id/toggleNewPassword"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:layout_marginEnd="28dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reset_password"
            android:src="@drawable/eye"
            app:layout_constraintBottom_toBottomOf="@+id/editNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editNewPassword"
            app:layout_constraintVertical_bias="0.461" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toStartOf="@+id/toggleConfirmPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editNewPassword" />

        <!-- Save Button -->
        <ImageButton
            android:id="@+id/toggleConfirmPassword"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reset_password"
            android:src="@drawable/eye"
            app:layout_constraintBottom_toBottomOf="@+id/editConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editConfirmPassword"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/savePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:backgroundTint="@color/btnActive"
            android:text="@string/save_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword"
            app:layout_constraintVertical_bias="0.065" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
